new mysql service
